tests/samples/invalid/misplaced_variable.pn
fn main() -> i32
{
	var x = y;

	var y: i32 = 13;

	return:
	x
}
